Correct overflow in overview tab

--- a/cu-manager-ui/app/styles/_card.scss
+++ b/cu-manager-ui/app/styles/_card.scss
@@ -150,7 +150,7 @@
 .card.overview, .card.service {
   .content {
     min-height: 310px;
-    overflow: visible;
+    overflow: auto;
   }
 }
 
